<resources>
    <string name="app_name">Drakkar</string>
    <string name="iniciarsesion">Log in</string>
    <string name="correoelectronico">Email</string>
    <string name="contrasenia">Password</string>
    <string name="olvidecontrasenia">Forgot your password?</string>
    <string name="registrate">Sign up</string>
    <string name="contraolvidada">Recover password</string>
    <string name="contolvdescripcion">We\'ll send a reset password link to your email.</string>
    <string name="enviar">Send</string>
    <string name="registrarse">Sign up</string>
    <string name="nombre">First Name</string>
    <string name="apellido">Last Name</string>
    <string name="avisoreg">By pressing the following button, you\'re accepting the terms and conditions.</string>
    <string name="aceptarregistrar">Accept and Sign up</string>
    <string name="errorinicses">Failed to log in, invalid credentials.</string>
    <string name="aceptar">Accept</string>
    <string name="bienvenido">Welcome</string>
    <string name="miperfil">My profile</string>
    <string name="saldogeneral">Overall balance</string>
    <string name="ingresostotales">Total incomes</string>
    <string name="gastostotales">Total expenses</string>
    <string name="ultimastransacciones">Last transactions</string>
    <string name="notransacciones">No transactions registered.</string>
    <string name="categorias">Categories</string>
    <string name="entrarcategoriasdescripcion">Create and edit your categories.</string>
    <string name="transacciones">Transactions</string>
    <string name="al">to</string>
    <string name="ingresos">Incomes</string>
    <string name="gastos">Expenses</string>
    <string name="saldo">Balance</string>
    <string name="agregar">Add</string>
    <string name="gasto">Expense</string>
    <string name="ingreso">Income</string>
    <string name="descripcion">Description</string>
    <string name="monto">Amount</string>
    <string name="categoria">Category</string>
    <string name="fecha">Date</string>
    <string name="guardar">Save</string>
    <string name="eliminar">Delete</string>
    <string name="seleccionar">Select</string>
    <string name="transaccion">Transaction</string>
    <string name="confirmacioneliminacion">Confirmation</string>
    <string name="confelmdescripcion">Do you want to delete this item?</string>
    <string name="si">Yes</string>
    <string name="elicaterrordescripcion">There is at least one transaction associated to this category, if you want to delete it you have to delete all the associated transactions.</string>
    <string name="errorconexion">Connection error.</string>
    <string name="cerrarsesion">Log out</string>
    <string name="cerrarsesiondescripcion">Are you sure you want to log out? You\'ll need to log in next time.</string>
    <string name="no">No</string>
    <string name="campovacio">Empty field</string>
    <string name="correoinvalido">Invalid email</string>
    <string name="cambiarcontrasenia">Change password</string>
    <string name="contraseniaactual">Current password</string>
    <string name="contrasenianueva">New password</string>
    <string name="confirmarcontrasenia">Confirm new password</string>
    <string name="cambiar">Change</string>
    <string name="cambiarcontraseniaexito">Your password has been successfully changed.</string>
    <string name="cambiarcontraseniaerror">There was an error, your password hasn\'t been changed.</string>
    <string name="errorcontact">Current password does not match.</string>
    <string name="errorconfcont">Confirmation doesn\'t match with new password.</string>
    <string name="cambiarcontraseniaaviso">Do you want to change your password?</string>
    <string name="estaditistica">Statistics</string>
    <string name="esttitulo1">Incomes - Expenses</string>
    <string name="esttitulo2">Expenses by category</string>
    <string name="esttitulo3">Incomes by category</string>
    <string name="contraseniainvalida">Invalid password</string>
    <string name="contraseniareq">- Must contain at least one number.<br />\n- Must contain at least one lowercase letter.<br />\n- Must contain at least one uppercase letter.<br />\n- Must contain a length of at least 8 characters and a maximum of 20.</string>
    <string name="registraraviso">To complete the registration you have to verify your account, we sent you and email to verify it.</string>
    <string name="registrarcorreo">This email is already registered.</string>
    <string name="nocategorias">No categories registered.</string>
    <string name="registrarerror">There was an error, your account hasn\'t been registered.</string>
    <string name="contolverror">This email is not registered.</string>
    <string name="contolvaviso">We send a reset password link to your email, please check your inbox.</string>
    <string name="registrarconfirmarcontrasenia">Confirm password</string>
    <string name="registrarerrorconfcont">Confirmation doesn\'t match with password.</string>
    <string name="registrarcat1">Bars and restaurants</string>
    <string name="registrarcat2">Clothing</string>
    <string name="registrarcat3">Debts and loans</string>
    <string name="registrarcat4">Education</string>
    <string name="registrarcat5">Entertainment and hobbies</string>
    <string name="registrarcat6">Family</string>
    <string name="registrarcat7">Food</string>
    <string name="registrarcat8">Gifts and donations</string>
    <string name="registrarcat9">Supermarket</string>
    <string name="registrarcat10">Health</string>
    <string name="registrarcat11">Home</string>
    <string name="registrarcat12">Investments</string>
    <string name="registrarcat13">Others</string>
    <string name="registrarcat14">Personal care</string>
    <string name="registrarcat15">Pets</string>
    <string name="registrarcat16">Shopping</string>
    <string name="registrarcat17">Subscriptions and services</string>
    <string name="registrarcat18">Taxes</string>
    <string name="registrarcat19">Transportation</string>
    <string name="registrarcat20">Travel</string>
    <string name="registrarcat21">Investments</string>
    <string name="registrarcat22">Loans</string>
    <string name="registrarcat23">Salary</string>
    <string name="registrarcat24">Others</string>
</resources>